--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js",
+    "dev": "concurrently \"npm start\" \"cd client && npm start\""
   },
   "author": "walid",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "concurrently": "^7.2.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.4"
   }
